--- a/index.html
+++ b/index.html
@@ -2,62 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ping Pong Counter</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     html, body {
       height: 100%;
+      margin: 0;
+    }
+    input::placeholder {
+      opacity: 0.5;
     }
   </style>
 </head>
-<body class="bg-gray-50 h-full flex flex-col">
-  <h1 class="text-5xl font-bold text-center mt-6 mb-4 flex-shrink-0">Ping Pong Scoreboard</h1>
-  <div class="flex flex-1 max-h-full">
-    <!-- Team A -->
-    <div class="bg-red-100 flex flex-col justify-center items-center w-1/2 p-6 gap-10 select-none">
-      <div class="flex flex-col items-center gap-6">
-        <div class="flex items-center gap-4 justify-center">
-          <span id="serverA1" class="text-5xl hidden select-none">🎯</span>
-          <input id="nameA1" class="text-4xl font-semibold border-b border-red-400 bg-transparent w-48 text-center focus:outline-none" value="Hafidz" />
-        </div>
-        <div class="flex items-center gap-4 justify-center">
-          <span id="serverA2" class="text-5xl hidden select-none">🎯</span>
-          <input id="nameA2" class="text-4xl font-semibold border-b border-red-400 bg-transparent w-48 text-center focus:outline-none" value="Rizky" />
-        </div>
-      </div>
-      <div id="scoreA" class="text-9xl font-extrabold my-6 select-none">0</div>
-      <div class="flex gap-6">
-        <button onclick="updateScore('A', 1)" class="bg-white rounded-xl px-8 py-4 shadow text-4xl font-bold select-none">+</button>
-        <button onclick="updateScore('A', -1)" class="bg-white rounded-xl px-8 py-4 shadow text-4xl font-bold select-none">-</button>
-      </div>
+<body class="bg-gray-50">
+  <div class="flex flex-col-reverse md:flex-col items-center justify-center min-h-screen w-full p-4 gap-4 overflow-hidden">
+    <h1 class="text-4xl md:text-6xl font-bold">Ping Pong Scoreboard</h1>
+
+    <!-- Controls -->
+    <div class="flex flex-wrap justify-center gap-4 text-xl md:text-2xl">
+      <button onclick="undo()" class="bg-yellow-100 rounded-xl px-6 py-3 shadow">↺ Undo</button>
+      <button onclick="reset()" class="bg-gray-200 rounded-xl px-6 py-3 shadow">⏹ Reset</button>
+      <button onclick="switchServerManually()" class="bg-green-200 rounded-xl px-6 py-3 shadow">🔁 Switch Server</button>
     </div>
 
-    <!-- Team B -->
-    <div class="bg-blue-100 flex flex-col justify-center items-center w-1/2 p-6 gap-10 select-none">
-      <div class="flex flex-col items-center gap-6">
-        <div class="flex items-center gap-4 justify-center">
-          <span id="serverB1" class="text-5xl hidden select-none">🎯</span>
-          <input id="nameB1" class="text-4xl font-semibold border-b border-blue-400 bg-transparent w-48 text-center focus:outline-none" value="Budi" />
+    <div class="grid grid-cols-1 md:grid-cols-2 w-full h-full max-w-7xl gap-6">
+      <!-- Team A -->
+      <div class="bg-red-100 p-6 rounded-2xl shadow text-center flex flex-col justify-center" id="teamA">
+        <div class="flex items-center gap-4 justify-center mb-6">
+          <span id="serverA1" class="text-3xl md:text-4xl hidden">🎯</span>
+          <input id="nameA1" class="text-center border-b border-red-300 bg-transparent w-40 md:w-60 text-2xl md:text-4xl lg:text-5xl" value="Hafidz" />
         </div>
-        <div class="flex items-center gap-4 justify-center">
-          <span id="serverB2" class="text-5xl hidden select-none">🎯</span>
-          <input id="nameB2" class="text-4xl font-semibold border-b border-blue-400 bg-transparent w-48 text-center focus:outline-none" value="Yoga" />
+        <div class="flex items-center gap-4 justify-center mb-6">
+          <span id="serverA2" class="text-3xl md:text-4xl hidden">🎯</span>
+          <input id="nameA2" class="text-center border-b border-red-300 bg-transparent w-40 md:w-60 text-2xl md:text-4xl lg:text-5xl" value="Rizky" />
+        </div>
+        <div class="text-8xl md:text-9xl lg:text-[10rem] font-bold my-6" id="scoreA">0</div>
+        <div class="flex justify-center gap-6 flex-wrap">
+          <button onclick="updateScore('A', 1)" class="bg-white rounded-xl px-6 py-3 text-3xl md:text-4xl shadow">+</button>
+          <button onclick="updateScore('A', -1)" class="bg-white rounded-xl px-6 py-3 text-3xl md:text-4xl shadow">-</button>
         </div>
       </div>
-      <div id="scoreB" class="text-9xl font-extrabold my-6 select-none">0</div>
-      <div class="flex gap-6">
-        <button onclick="updateScore('B', 1)" class="bg-white rounded-xl px-8 py-4 shadow text-4xl font-bold select-none">+</button>
-        <button onclick="updateScore('B', -1)" class="bg-white rounded-xl px-8 py-4 shadow text-4xl font-bold select-none">-</button>
+
+      <!-- Team B -->
+      <div class="bg-blue-100 p-6 rounded-2xl shadow text-center flex flex-col justify-center" id="teamB">
+        <div class="flex items-center gap-4 justify-center mb-6">
+          <span id="serverB1" class="text-3xl md:text-4xl hidden">🎯</span>
+          <input id="nameB1" class="text-center border-b border-blue-300 bg-transparent w-40 md:w-60 text-2xl md:text-4xl lg:text-5xl" value="Budi" />
+        </div>
+        <div class="flex items-center gap-4 justify-center mb-6">
+          <span id="serverB2" class="text-3xl md:text-4xl hidden">🎯</span>
+          <input id="nameB2" class="text-center border-b border-blue-300 bg-transparent w-40 md:w-60 text-2xl md:text-4xl lg:text-5xl" value="Yoga" />
+        </div>
+        <div class="text-8xl md:text-9xl lg:text-[10rem] font-bold my-6" id="scoreB">0</div>
+        <div class="flex justify-center gap-6 flex-wrap">
+          <button onclick="updateScore('B', 1)" class="bg-white rounded-xl px-6 py-3 text-3xl md:text-4xl shadow">+</button>
+          <button onclick="updateScore('B', -1)" class="bg-white rounded-xl px-6 py-3 text-3xl md:text-4xl shadow">-</button>
+        </div>
       </div>
     </div>
-  </div>
-
-  <!-- Controls -->
-  <div class="flex gap-6 mt-6 justify-center flex-shrink-0 px-4 pb-6">
-    <button onclick="undo()" class="bg-yellow-200 rounded-xl px-8 py-3 shadow text-3xl font-semibold select-none">↺ Undo</button>
-    <button onclick="reset()" class="bg-gray-300 rounded-xl px-8 py-3 shadow text-3xl font-semibold select-none">⏹ Reset</button>
-    <button onclick="switchServerManually()" class="bg-green-300 rounded-xl px-8 py-3 shadow text-3xl font-semibold select-none">🔁 Switch Server</button>
   </div>
 
   <script>
